--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,5 @@
 @import "normalize.scss";
-@import "font-face.scss";
 @import "variables.scss";
-@import "mixins.scss";
 @import "global.scss";
+@import "blocks/container.scss";
+@import "blocks/main.scss";
