--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,6 @@
 @import "normalize.scss";
 @import "variables.scss";
 @import "global.scss";
+@import "blocks/landing-page.scss";
+@import "blocks/header.scss";
 @import "blocks/container.scss";
-@import "blocks/main.scss";
