--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -25,6 +25,20 @@
   border: 1px solid rgba(151, 151, 151, 0.2);
   border-radius: 21px;
   text-align: center;
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 0 2px rgba(151, 151, 151, 0.2);
+}
+
+.menu-link:hover {
+  background-color: #2eb7e6;
+  border-color: #2eb7e6;
+  color: #ffffff;
+}
+
+.menu-link:focus {
+  background-color: rgba(0, 0, 0, 0.3);
+  border-color: rgba(46, 183, 230, 0.2);
+  box-shadow: inset 0 0 0 2px rgba(46, 183, 230, 0.2);
 }
 
 .dropdown-link {
@@ -39,7 +53,11 @@
   border-color: tomato;
 }
 
-.link-live:before {
+.link-live:hover {
+  color: tomato;
+}
+
+.link-live::before {
   content: "";
   position: absolute;
   width: 6px;
@@ -52,26 +70,98 @@
 
 .link-search {
   width: 50px;
+  margin-top: 0;
   border: none;
-  border-left: 3px solid rgba(151, 151, 151, 0.2);
+  border-left: 1px solid rgba(151, 151, 151, 0.2);
   border-radius: 0;
+  font-size: 23px;
+  box-shadow: 0 0 0 0;
+}
+
+.link-search:hover {
+  color: #ffffff;
 }
 
 .link-user {
   font-size: 24px;
   position: relative;
-  border: none;
+  border: 0;
   margin-top: -10px;
   width: 53px;
   padding: 4px;
+  box-shadow: 0 0 0 0;
 }
 
-.link-user:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 53px;
-    height: 2px;
-    color: tomato;
+.link-user:hover {
+  color: #ffffff;
+}
+
+.link-user::before {
+  content: "";
+  position: absolute;
+  width: 53px;
+  height: 3px;
+  left: 8px;
+  bottom: -6px;
+  background-color: tomato;
+  border-radius: 1.5px;
+}
+
+.btn-lang {
+  font-size: 14px;
+  color: #ffffff;
+  font-weight: bold;
+  text-align: center;
+  padding: 6px 20px;
+  background-color: rgba(0, 0, 0, 0.3);
+  text-decoration: none;
+}
+
+.btn-lang:hover {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #2eb7e6;
+  border-radius: 21px;
+}
+
+.select-language {
+  margin-left: 20px;
+  border: 1px solid rgba(151, 151, 151, 0.2);
+  border-radius: 21px;
+  box-shadow: inset 0 0 0 2px rgba(151, 151, 151, 0.2);
+}
+
+.header__title {
+  padding-top: 72px;
+  margin: 0 auto;
+  font-family: "Pacifico", cursive;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 34px;
+  line-height: 85px;
+  text-align: center;
+}
+
+.header__btn {
+  margin: 70px 20px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  padding: 10px 42px;
+  background-color: rgba(0, 0, 0, 0.1);
+  color: #ffffff;
+  border-radius: 30px;
+  border-color: #2eb7e6;
+}
+
+.header__btn-active {
+  background: linear-gradient(to right, #5ee0fe, #0293d1);
+  border: none;
+}
+
+.header__social {
+  padding-top: 80px;
+}
+
+.social__link {
+  padding-left: 10px;
 }
