--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,3 +4,6 @@
 @import "blocks/landing-page.scss";
 @import "blocks/header.scss";
 @import "blocks/container.scss";
+@import "blocks/main.scss";
+@import "blocks/video.scss";
+@import "blocks/service.scss";
